# SalesOps.ai

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  calls.py  orgs.py  router.py  settings.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: auth.py  calls.py  core.py  settings.py  users.py
backend/app/services/: analysis.py  call_pipeline.py  dependencies.py  transcription.py
backend/app/tasks/: celery_app.py  tasks.py
backend/app/workers/: celery_app.py
backend/tests/: test_api.py  test_auth_and_calls.py
database/: schema.sql  seed.sql
database/migrations/: 001_initial.sql  README.md
docs/: api.md  architecture.md  deployment.md  development.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/calls/: page.tsx
frontend/app/calls/[id]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: AuthForm.tsx  CallUploader.tsx  DashboardClient.tsx
frontend/lib/: api.ts  store.ts
infrastructure/scripts/: bootstrap_local.sh
